# yamicache

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  NOTES.md  README.rst  manage.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
__manage/: __init__.py  docs.py  version.py
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  sphinx-reload.py  usage.rst
tests/: __init__.py  test_class.py  test_clear_deco.py  test_collide.py  test_default_args.py  test_exceptions.py  test_gc.py  test_init.py  test_noclass.py  test_serialization.py  test_threading.py
yamicache/: __init__.py  yamicache.py
